--- a/src/main/resource/jdbc.properties
+++ b/src/main/resource/jdbc.properties
@@ -9,15 +9,15 @@
 #jdbc.url=jdbc:sqlserver://192.168.0.3:1433;DatabaseName=RDSYSEDUV82310831
 #jdbc.url=jdbc:sqlserver://192.168.0.3:1433;DatabaseName=RDSYSEDUV850SZDX
 
-jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@192.168.0.3:51521:ora19cinst
-jdbc.username=RDSYSEDUV85012743
-#jdbc.username=RDSYSEDUV82210586
-jdbc.password=eplugger
-
-##\u7814\u7A76\u6240
 #jdbc.driver=oracle.jdbc.driver.OracleDriver
 #jdbc.url=jdbc:oracle:thin:@192.168.0.3:51521:ora19cinst
-#jdbc.username=RDSYSCASV85220053
-#jdbc.password=zpC!ZH%!k1
+#jdbc.username=RDSYSEDUV85012743
+#jdbc.password=eplugger
+#jdbc.username=RDSYSEDUV82210586
+
+##\u7814\u7A76\u6240
+jdbc.driver=oracle.jdbc.driver.OracleDriver
+jdbc.url=jdbc:oracle:thin:@192.168.0.3:51521:ora19cinst
+jdbc.username=RDSYSCASV85220053
+jdbc.password=zpC!ZH%!k1
 #jdbc.password=eplugger
