--- a/src/main/resource/logging.properties
+++ b/src/main/resource/logging.properties
@@ -12,14 +12,14 @@
 #-----------------------------------------------------------------------------------------------------------
 
 # \u65e5\u5fd7\u683c\u5f0f
-#java.util.logging.SimpleFormatter.format=%4$s: %5$s [%1$tc]%n
+java.util.logging.SimpleFormatter.format=%1$tc %4$s: %5$s%n
 
 #\u6307\u5b9aRoot Logger\u7ea7\u522b
-.level= SEVERE
+.level=SEVERE
 #\u4e3a Handler \u6307\u5b9a\u9ed8\u8ba4\u7684\u7ea7\u522b\uff08\u9ed8\u8ba4\u4e3a Level.INFO\uff09\u3002
 java.util.logging.ConsoleHandler.level=SEVERE
 # \u6307\u5b9a\u8981\u4f7f\u7528\u7684 Formatter \u7c7b\u7684\u540d\u79f0\uff08\u9ed8\u8ba4\u4e3a java.util.logging.SimpleFormatter\uff09\u3002
-java.util.logging.ConsoleHandler.formatter=logging.formatter.MySimpleFormatter
+#java.util.logging.ConsoleHandler.formatter=logging.formatter.MySimpleFormatter
 
 # \u4e3a Handler \u6307\u5b9a\u9ed8\u8ba4\u7684\u7ea7\u522b\uff08\u9ed8\u8ba4\u4e3a Level.ALL\uff09\u3002
 java.util.logging.FileHandler.level=SEVERE
