--- a/src/main/resource/log4j.properties
+++ b/src/main/resource/log4j.properties
@@ -2,14 +2,14 @@ log4j.rootLogger=debug, stdout, R
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[tmSys] [%5p] [%d{yyyy-MM-dd HH:mm:ss}] (%F:%L) %m%n
+log4j.appender.stdout.layout.ConversionPattern=[%5p] %d (%F:%L) %m%n
 
 log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=/home/appadmin/logs/xmlUtil.log
+log4j.appender.R.File=logs/quickToolkit.log
 log4j.appender.R.MaxFileSize=5012KB
 log4j.appender.R.MaxBackupIndex=50
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=[tmSys][%5p] [%d{yyyy-MM-dd HH:mm:ss}] (%F:%L) %m%n
+log4j.appender.R.layout.ConversionPattern=[%5p] %d (%F:%L) %m%n
 
 log4j.logger.org.apache=debug
 log4j.logger.com.opensymphony=debug
