--- a/src/main/resource/jdbc.properties
+++ b/src/main/resource/jdbc.properties
@@ -5,19 +5,24 @@
 
 #jdbc.url=jdbc:sqlserver://192.168.0.4:1433;DatabaseName=RDSYSEDUV851SZPC
 #jdbc.password=Eplugger231
-#jdbc.url=jdbc:sqlserver://192.168.0.3:1433;DatabaseName=RDSYSHISV31510391 RDSYSEDUV830110577
+#jdbc.url=jdbc:sqlserver://192.168.0.3:1433;DatabaseName=RDSYSHISV31510391
 #jdbc.url=jdbc:sqlserver://192.168.0.3:1433;DatabaseName=RDSYSEDUV82310831
 #jdbc.url=jdbc:sqlserver://192.168.0.3:1433;DatabaseName=RDSYSEDUV850SZDX
 
 #jdbc.driver=oracle.jdbc.driver.OracleDriver
-#jdbc.url=jdbc:oracle:thin:@192.168.0.3:51521:ora19cinst
+#jdbc.url=jdbc:oracle:thin:@192.168.0.4:1521:ora19cinst
 #jdbc.username=RDSYSEDUV85012743
 #jdbc.password=eplugger
 #jdbc.username=RDSYSEDUV82210586
 
-##\u7814\u7A76\u6240
-jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@192.168.0.4:1521:ora19cinst
-jdbc.username=RDSYSCASV85220053
-jdbc.password=zpC!ZH%!k1
-#jdbc.password=eplugger
+##深圳研究院
+#jdbc.driver=oracle.jdbc.driver.OracleDriver
+#jdbc.url=jdbc:oracle:thin:@192.168.0.4:1521:ora19cinst
+#jdbc.username=RDSYSCASV85220053
+#jdbc.password=zpC!ZH%!k1
+
+##番职院
+jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+jdbc.url=jdbc:sqlserver://192.168.0.3:1433;DatabaseName=RDSYSEDUV85312046
+jdbc.username=sa
+jdbc.password=eplugger
