--- a/src/main/resource/jdbc.properties
+++ b/src/main/resource/jdbc.properties
@@ -21,6 +21,12 @@
 #jdbc.username=RDSYSCASV85220053
 #jdbc.password=zpC!ZH%!k1
 
+##广东机电
+#jdbc.driver=oracle.jdbc.driver.OracleDriver
+#jdbc.url=jdbc:oracle:thin:@192.168.0.4:1521:ora19cinst
+#jdbc.username=RDSYSEDUV85012743
+#jdbc.password=eplugger
+
 ##番职院
 jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 jdbc.url=jdbc:sqlserver://192.168.0.3:1433;DatabaseName=RDSYSEDUV85312046
