--- a/src/test/resource/log4j.properties
+++ b/src/test/resource/log4j.properties
@@ -4,17 +4,8 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%5p] %d (%F:%L) %m%n
 
-#??????
-#log4j.appender.R=org.apache.log4j.RollingFileAppender
-#log4j.appender.R.File=logs/quickToolkit.log
-#log4j.appender.R.MaxFileSize=5012KB
-#log4j.appender.R.MaxBackupIndex=50
-#log4j.appender.R.layout=org.apache.log4j.PatternLayout
-#log4j.appender.R.layout.ConversionPattern=[%5p] %d (%F:%L) %m%n
-
-#????
 log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.R.File=logs/quickToolkit.log
+log4j.appender.R.File=logs/quickToolkitTest.log
 log4j.appender.R.DatePattern=yyyy-MM-dd'.log'
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=[%5p] %d (%F:%L) %m%n
