--- a/src/main/resource/jdbc/RDSYSCASV85220053.properties
+++ b/src/main/resource/jdbc/RDSYSCASV85220053.properties
@@ -1,4 +1,8 @@
 ##深圳研究院
+#jdbc.driver=oracle.jdbc.driver.OracleDriver
+#jdbc.url=jdbc:oracle:thin:@119.130.100.190:1521:ora19cinst
+#jdbc.username=RDSYSCASV85220053
+#jdbc.password=zpC!ZH%!k1
 jdbc.driver=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracle:thin:@192.168.0.4:1521:ora19cinst
 jdbc.username=RDSYSCASV85220053
