--- a/src/main/resource/baidubceAuth.properties
+++ b/src/main/resource/baidubceAuth.properties
@@ -1,3 +1,5 @@
 #Mon Mar 20 09:12:56 CST 2023
+clientId=EN46EdO9KCPS9CtppYIaGzaP
+clientSecret=onkAHr1QFlf22PCuueoez9ncOOb7lIHO
 token=24.d383e997915bed6c96e04a2cfb7794dd.2592000.1681866776.282335-25893907
 time=2023-03-20 09\:12\:55
