--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.eplugger</groupId>
-	<artifactId>QUICKTOOLKIT</artifactId>
+	<artifactId>quick-toolkit</artifactId>
 	<version>1.0</version>
-	<name>QUICKTOOLKIT</name>
+	<name>quick-toolkit</name>
 	<url>https://github.com/minghui2019/QUICKTOOLKIT</url>
 
 	<properties>
@@ -30,7 +30,7 @@
 		</dependency>
 		<dependency>
 			<groupId>top.tobak</groupId>
-			<artifactId>QUICKUTILS</artifactId>
+			<artifactId>quick-utils</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<!-- 数据库连接驱动 -->
@@ -89,12 +89,6 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>com.aspose</groupId>
-			<artifactId>words</artifactId>
-			<version>19.2</version>
-		</dependency>
-		
 		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
@@ -105,6 +99,12 @@
 			<groupId>net.sourceforge.htmlunit</groupId>
 			<artifactId>htmlunit</artifactId>
 			<version>2.20</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.9</version>
 		</dependency>
 	</dependencies>
 
