--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
 			<artifactId>opencsv</artifactId>
 			<version>5.9</version>
 		</dependency>
+		<!-- 字符串公式计算工具 -->
+		<dependency>
+			<groupId>org.beanshell</groupId>
+			<artifactId>bsh</artifactId>
+			<version>2.0b4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
