1. 对IXmlParserRegister的所有实现类修改代码提交

--- a/src/test/resource/log4j.properties
+++ b/src/test/resource/log4j.properties
@@ -2,13 +2,13 @@ log4j.rootLogger=debug, stdout, R
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%5p] %d (%F:%L) %m%n
+log4j.appender.stdout.layout.ConversionPattern=[%5p] %d (%c#%M:%L) %m%n
 
 log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.R.File=logs/quickToolkitTest.log
 log4j.appender.R.DatePattern=yyyy-MM-dd'.log'
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=[%5p] %d (%F:%L) %m%n
+log4j.appender.R.layout.ConversionPattern=[%5p] %d (%c#%M:%L) %m%n
 
 log4j.logger.org.apache=debug
 log4j.logger.com.opensymphony=debug
@@ -16,3 +16,5 @@ log4j.logger.org.springframework=debug
 log4j.logger.org.mybatis=debug
 log4j.logger.org.apache.commons.httpclient=ERROR
 log4j.logger.org.apache.commons.beanutils=ERROR
+log4j.logger.top.tobak.xml.dom4j.utils.XmlParserInitializer=ERROR
+log4j.logger.org.reflections.Reflections=ERROR
