--- a/src/main/resource/jdbc/RDSYSEDUV856111845.properties
+++ b/src/main/resource/jdbc/RDSYSEDUV856111845.properties
@@ -1,5 +1,5 @@
 ##广东工业大学
 jdbc.driver=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@192.168.0.4:1521:ora19cinst
+jdbc.url=jdbc:oracle:thin:@192.168.0.103:1521:ora12cinst
 jdbc.username=RDSYSEDUV856111845
-jdbc.password=eplugger
+jdbc.password=o$bK%Frx
